[package]
name = "nigeria-geo-api"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Production-ready Nigeria Geo + Postal + Validation API"
license = "MIT"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "multipart", "tracing"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }

# Redis & Caching
redis = { version = "0.24", features = ["tokio-comp", "json"] }

# Authentication & Security
uuid = { version = "1.0", features = ["v4", "serde"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# OpenAPI/Swagger
utoipa = { version = "4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# Additional utilities
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"